--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,13 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  // "plugins": ["transform-vue-jsx", "transform-runtime"]
+  // 改动：
+  "plugins": [
+    // ["import", {
+    //   "libraryName": "vant",
+    //   "libraryDirectory": "es",
+    //   "style": true
+    // }]
+  ]
 }
