--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "author": "",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
+    "echarts": "^4.9.0",
+    "echarts-liquidfill": "^2.0.6",
     "fastclick": "^1.0.6",
+    "ol3-echarts": "^2.0.3",
     "vant": "^2.10.2",
     "vue": "^2.5.2",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
     "vuex": "^3.5.1"
